Iniciando alteração na secção de clientes (criando rotas e template).

--- a/templates/client_indexOld.html
+++ b/templates/client_indexOld.html
@@ -9,7 +9,12 @@
             <a class="btn btn-primary" href="{% url 'login' %}">Login</a>
             <a class="btn btn-primary" href="{% url 'registrar' %}">Cadastre-se</a>
         {% else %}
-            
+            <h1>Área do Cliente</h1>
+
+            <div class="alert alert-primary" role="alert">
+                Seja bem-vindo(a) {{ user.get_full_name }}!
+            </div>
+            <a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
         {% endif %}
             
     </div>
