--- a/templates/client_index.html
+++ b/templates/client_index.html
@@ -2,16 +2,12 @@
 {% block content %}
 
     <div class="container">
-        
-        {% if user.is_anonymous %}
-            <h1>Olá! Faça Login ou Cadastre-se</h1>
-
-            <a class="btn btn-primary" href="{% url 'login' %}">Login</a>
-            <a class="btn btn-primary" href="{% url 'registrar' %}">Cadastre-se</a>
-        {% else %}
-            
-        {% endif %}
-            
-    </div>
+        <h1>Área do Cliente</h1>
+      
+        <div class="alert alert-primary" role="alert">
+          Seja bem-vindo(a) {{ user.get_full_name }}!
+        </div>
+        <a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
+      </div>
 
 {% endblock %}
