Alterados os templates e rotas de login. Listando moedas por usuário na tela de profile

--- a/templates/client_index.html
+++ b/templates/client_index.html
@@ -1,13 +1,9 @@
 {% extends 'registration/baseLogin.html' %}
 {% block content %}
 
-    <div class="container">
-        <h1>Área do Cliente</h1>
-      
-        <div class="alert alert-primary" role="alert">
-          Seja bem-vindo(a) {{ user.get_full_name }}!
-        </div>
-        <a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
-      </div>
+<h1>Olá! Faça Login ou Cadastre-se</h1>
+
+<a class="btn btn-primary" href="{% url 'login' %}">Login</a>
+<a class="btn btn-primary" href="{% url 'registrar' %}">Cadastre-se</a>
 
 {% endblock %}
