--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,6 +7,7 @@
 
       <div class="alert alert-primary" role="alert">
           Seja bem-vindo(a) {{ user.get_full_name }}!
+          Seu saldo é: R${{user.saldo}}
       </div>
       <a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
 <br>
@@ -17,9 +18,8 @@
         <thead>
           <tr>
             <th scope="col">Moeda</th>
-            <th scope="col">Quantidade (R$)</th>
-            <th scope="col">Data</th>
-            <th scope="col">Vender</th>
+            <th scope="col">Quantidade</th>
+            <th scope="col">Data da Compra</th>
           </tr>
         </thead>
         <tbody>
@@ -28,9 +28,8 @@
             
           <tr>
             <th scope="row">{{m.moeda}}</th>
-            <th scope="row">R$ {{m.quantidade_reais_compra}}</th>
+            <th scope="row">{{m.quantidade_moeda}}</th>
             <td colspan="2">{{m.criado}}</td>
-            <td colspan="2"><a href=""><button type="button" class="btn btn-danger">Vender</button></a></td>
           </tr>
 
           {% endfor %}
