--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,7 +7,7 @@
 
       <div class="alert alert-primary" role="alert">
           Seja bem-vindo(a) {{ user.get_full_name }}!
-          Seu saldo é: R${{user.saldo}} <a href="">saque</a> / <a href="">depositar</a>
+          Seu saldo é: R${{user.saldo}} <a href="{% url 'novo_saque' %}">saque</a> / <a href="{% url 'novo_deposito' %}">depositar</a>
       </div>
       <a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
 <br>
