--- a/templates/forms/saque.html
+++ b/templates/forms/saque.html
@@ -4,7 +4,7 @@
 <form action="." method="POST">
   {% csrf_token %}
   {{ form.as_p }}
-  <input type="submit" class="btn btn-default" value="Vender">
+  <input type="submit" class="btn btn-default" value="Abrir Ordem de Saque">
 </form>
 
 {% endblock %}
